--- a/web/package.json
+++ b/web/package.json
@@ -9,13 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "13.0.1",
+    "axios": "^1.1.3",
+    "next": "13.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@types/node": "18.11.8",
+    "@types/node": "18.11.7",
     "@types/react": "18.0.24",
-    "typescript": "4.8.4"
+    "autoprefixer": "^10.4.13",
+    "eslint": "8.26.0",
+    "eslint-config-next": "13.0.0",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.1"
   }
 }
