--- a/server/package.json
+++ b/server/package.json
@@ -1,10 +1,10 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "<h1 align=\"center\">\r     <img alt=\"CardCopa\" title=\"#delicinha\" src=\"card.png\" width=\"400px\" />\r     <img alt=\"CardCopa\" title=\"#delicinha\" src=\"card1.jpg\" width=\"400px\" />\r </h1>",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx  watch src/server.ts"
+    "dev": "tsx watch src/server.ts"
   },
   "keywords": [],
   "author": "",
@@ -15,12 +15,13 @@
   "devDependencies": {
     "@mermaid-js/mermaid-cli": "^9.1.7",
     "prisma": "^4.5.0",
-    "prisma-erd-generator": "^1.2.2",
+    "prisma-erd-generator": "^1.2.1",
     "tsx": "^3.11.0",
     "typescript": "^4.8.4"
   },
   "dependencies": {
     "@fastify/cors": "^8.1.1",
+    "@fastify/jwt": "^6.3.2",
     "@prisma/client": "^4.5.0",
     "fastify": "^4.9.2",
     "short-unique-id": "^4.4.4",
