--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -1,3 +1,5 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": "next/core-web-vitals",
+  "indent" : "off",
+  "template-curly-spacing" : "off",
 }
