--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -1,5 +1,3 @@
 {
-  "extends": "next/core-web-vitals",
-  "indent" : "off",
-  "template-curly-spacing" : "off"
+  "extends": "next/core-web-vitals"
 }
