--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -1,5 +1,8 @@
 {
   "extends": "next/core-web-vitals",
   "indent" : "off",
-  "template-curly-spacing" : "off"
+  "template-curly-spacing" : "off",
+  "rules": {
+    "indent": [ "error", "tab" ]
+}
 }
