--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -1,8 +1,11 @@
 {
   "extends": "next/core-web-vitals",
-  "indent" : "off",
-  "template-curly-spacing" : "off",
+  "indent": "off",
+  "template-curly-spacing": "off",
   "rules": {
-    "indent": [ "error", "tab" ]
-}
+    "indent": ["error", "tab"]
+  },
+  "ecmaFeatures": {
+    "modules": false
+  }
 }
