--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -1,10 +1,3 @@
 {
-  "extends": "next/core-web-vitals",
-  "template-curly-spacing": "off",
-  "rules": {
-    "indent": ["error", "tab"]
-  },
-  "ecmaFeatures": {
-    "modules": false
-  }
+  "extends": "next/core-web-vitals"
 }
