--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -1,10 +1,3 @@
 {
-  "extends": [
-    "next/core-web-vitals",
-    "eslint:recommended",
-    "indent:off"
-  ],
-  "rules": {
-    "indent": ["error", 4]
-  }
+  "extends": "next/core-web-vitals"
 }
