--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -1,25 +1,3 @@
 {
-  "extends": "next/core-web-vitals",
-  "rules": {
-    "camelcase": "off",
-    "prettier/prettier": 0,
-    "no-unused-vars": "error",
-    "@typescript-eslint/no-unused-vars": "error",
-    "@typescript-eslint/no-explicit-any": "off",
-    "@typescript-eslint/explicit-module-boundary-types": "off",
-    "@typescript-eslint/no-empty-function": "off",
-    "require-jsdoc": 0,
-    "no-invalid-this": 0,
-    "valid-jsdoc": 0,
-    "indent": "off",
-    "linebreak-style": "off",
-    "object-curly-spacing": 0,
-    "quotes": ["error", "single"],
-    "semi": ["error", "always"],
-    "operator-linebreak": [
-      "error",
-      "after",
-      { "overrides": { "?": "before", ":": "before" } }
-    ]
-  }
+  "extends": "next/core-web-vitals"
 }
