--- a/mobile/package.json
+++ b/mobile/package.json
@@ -31,7 +31,8 @@
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-svg": "12.3.0",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "expo-updates": "~0.14.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
