--- a/mobile/.gitignore
+++ b/mobile/.gitignore
@@ -1,4 +1,7 @@
 node_modules/
+# Keep environment variables out of version control
+
+
 .expo/
 dist/
 npm-debug.*
@@ -9,8 +12,7 @@ npm-debug.*
 *.mobileprovision
 *.orig.*
 web-build/
-
-.env
-
 # macOS
 .DS_Store
+
+.env
